Muri Changelog
===================================

Version 1.1.6 (Git)
  * Reenabled Facebook album parsing ability

Version 1.1.5
  * Minor update, changed facebook "media_api_id" to only return a string representation, not a hash
    - Facebook provides "media_api_ids" which is a hash including pid, uid, and fql_id (the regular "media_api_id")

Version 1.1.3
  * Changed "FLICKR_PHOTO" to "FLICKR_MEDIA" (since it can parse videos)
    - "flickr_photo?" is replaced by "flickr_media?" now
  * Facebook parser overhaul thanks to their new 'Graph API'
    - media_api_id is no longer the true facebook database API id for photos, though it is now for videos
    - Facebook parser accepts video URL's, but albums temporarily disabled
  * Removed deprecated "is_" methods
  * Changed service names all lowercase letters (eg. "Vimeo" to "vimeo").
    - Should not have any major impact on usage, mostly an internal change.
  * URL parse now only escapes spaces, not all characters (allows # to create URI fragment)