@@ -1,4 +1,4 @@
 --- 
 :major: 1
 :minor: 1
-:patch: 5
+:patch: 6
