@@ -1,15 +1,15 @@
 # Generated by jeweler
-# DO NOT EDIT THIS FILE
-# Instead, edit Jeweler::Tasks in Rakefile, and run `rake gemspec`
+# DO NOT EDIT THIS FILE DIRECTLY
+# Instead, edit Jeweler::Tasks in Rakefile, and run the gemspec command
 # -*- encoding: utf-8 -*-
 
 Gem::Specification.new do |s|
   s.name = %q{muri}
-  s.version = "1.1.5"
+  s.version = "1.1.6"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["William Schneider"]
-  s.date = %q{2010-04-29}
+  s.date = %q{2011-04-19}
   s.description = %q{Automatically get media information from the URL.}
   s.email = %q{bananastalktome@gmail.com}
   s.extra_rdoc_files = [
@@ -33,31 +33,31 @@ Gem::Specification.new do |s|
      "lib/muri/filters/vimeo.rb",
      "lib/muri/filters/youtube.rb",
      "muri.gemspec",
-     "test/error_test.rb",
-     "test/facebook_test.rb",
-     "test/flickr_test.rb",
-     "test/imageshack_test.rb",
-     "test/photobucket_test.rb",
-     "test/picasa_test.rb",
-     "test/twitpic_test.rb",
-     "test/vimeo_test.rb",
-     "test/youtube_test.rb"
+     "spec/error_spec.rb",
+     "spec/facebook_spec.rb",
+     "spec/flickr_spec.rb",
+     "spec/imageshack_spec.rb",
+     "spec/photobucket_spec.rb",
+     "spec/picasa_spec.rb",
+     "spec/twitpic_spec.rb",
+     "spec/vimeo_spec.rb",
+     "spec/youtube_spec.rb"
   ]
   s.homepage = %q{http://github.com/bananastalktome/muri/}
   s.rdoc_options = ["--charset=UTF-8"]
   s.require_paths = ["lib"]
-  s.rubygems_version = %q{1.3.6}
+  s.rubygems_version = %q{1.3.5}
   s.summary = %q{Media URI Parser}
   s.test_files = [
-    "test/picasa_test.rb",
-     "test/imageshack_test.rb",
-     "test/twitpic_test.rb",
-     "test/flickr_test.rb",
-     "test/vimeo_test.rb",
-     "test/youtube_test.rb",
-     "test/error_test.rb",
-     "test/facebook_test.rb",
-     "test/photobucket_test.rb"
+    "spec/vimeo_spec.rb",
+     "spec/flickr_spec.rb",
+     "spec/twitpic_spec.rb",
+     "spec/picasa_spec.rb",
+     "spec/photobucket_spec.rb",
+     "spec/facebook_spec.rb",
+     "spec/youtube_spec.rb",
+     "spec/error_spec.rb",
+     "spec/imageshack_spec.rb"
   ]
 
   if s.respond_to? :specification_version then
@@ -70,3 +70,4 @@ Gem::Specification.new do |s|
   else
   end
 end
+
